manifests/manifests/json2grpc/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: json2grpc
  namespace: plarail2021
spec:
  routes:
  - kind: Rule
    match: Host(`json2grpc.chofufes2022.ueckoken.club`)
    services:
    - name: soft-backend-json2grpc
      port: 80
  tls:
    secretName: cloudflare-cert
